--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 
 .out
+music_genres.sqlite
 
 ### Intellij ###
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio, WebStorm and Rider
