--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-burn = { version = "0.14.0", features = ["ndarray", "train", "autodiff", "tch", "fusion", "wgpu"] }
+burn = { git = "https://github.com/rerz/burn", features = ["ndarray", "train", "autodiff", "tch", "fusion", "wgpu"] }
 color-eyre = "0.6.3"
 itertools = "0.13.0"
 ndarray = "0.15.6"
@@ -27,3 +27,4 @@ libc = "0.2.158"
 serde = "1.0.209"
 lewton = "0.10.2"
 infer = "0.16.0"
+serde_json = "1.0.127"
