--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,8 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-burn = { git = "https://github.com/rerz/burn", features = ["ndarray", "train", "autodiff", "tch", "fusion", "wgpu", "cuda-jit", "candle"] }
+burn = { version = "0.14.0", features = ["ndarray", "train", "autodiff", "tch", "fusion", "wgpu"] }
+burnx = { path = "../burnx" }
 color-eyre = "0.6.3"
 itertools = "0.13.0"
 ndarray = "0.15.6"
@@ -28,3 +29,5 @@ serde = "1.0.209"
 lewton = "0.10.2"
 infer = "0.16.0"
 serde_json = "1.0.127"
+rubato = "0.16.0"
+symphonia = "0.5.4"
